@@ -72,6 +72,8 @@ Release 0.8.3
 - make static pages (all lower case) load properly in case of duplicate
   filenames
 - fix recursion in ZMPluginView
+- update sample_plugin with form based admin page that allows to change values
+- add ZMRequest:getMethod()
 
 Release 0.8.2
 - product_notifications.php should not use $zm_account
